# b

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
go/: b.go  b_test.go
shaders/: encode.wgsl
src/: bits.rs  color.rs  config.rs  error.rs  ffi.rs  lib.rs  main.rs
src/decoder/: detect.rs  mod.rs  sample.rs
src/encoder/: ldpc.rs  matrix.rs  mod.rs  pattern.rs
src/gpu/: mod.rs  wgpu_backend.rs
